.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
08:04:38 **** Build of configuration Debug for project mergesort ****
make all 
Building file: ../src/Mergesort.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Mergesort.d" -MT"src/Mergesort.o" -o "src/Mergesort.o" "../src/Mergesort.cpp"
../src/Mergesort.cpp:128:31: error: a space is required between consecutive right angle brackets (use '> >')
    vector<fileBuffer<uint64_t>> inBufs;
                              ^~
                              > >
../src/Mergesort.cpp:149:29: error: expected '(' for function-style cast or type construction
        queue.push(mergeItem{buf.buffer[0], i});
                   ~~~~~~~~~^
../src/Mergesort.cpp:178:33: error: expected '(' for function-style cast or type construction
            queue.push(mergeItem{srcBuf.buffer[srcBuf.index], top.srcIndex});
                       ~~~~~~~~~^
3 errors generated.
make: *** [src/Mergesort.o] Error 1
